--- a/content/_index.html
+++ b/content/_index.html
@@ -5,13 +5,13 @@ date: ''
 
 
 
-<div id="ogan-mancarci" class="section level2">
-<h2>Ogan Mancarci</h2>
+<div id="b.-ogan-mancarci" class="section level2">
+<h2>B. Ogan Mancarci</h2>
 <p><img src="./images/cropogbrain.png" align="left" height="180" width="180" title="colorized MRI scan of my head. DICOM is a widely used medical imaging format that can be read from R using the oro.dicom package. The image is colorized using the prisma app. You can also see why I always sleep on my left site to breath easier" style="margin:0px 20px"></p>
 <p>I am a PhD student of bioinformatics in UBC. I work on gene expression in brain cell types and try to extract cell type specific signals from whole brain gene expression data. Here’s a <a href="http://oganm.github.io/CV/">CV</a>.</p>
 </div>
-<div id="work-projects" class="section level1">
-<h1>Work projects</h1>
+<div id="work-related-projects" class="section level1">
+<h1>Work related projects</h1>
 <ul>
 <li><p><a href="http://neuroexpresso.org/"><strong>NeuroExpresso</strong></a> is my lab’s database cell type specific gene expression. It was released with <a href="http://www.eneuro.org/content/4/6/ENEURO.0212-17.2017">Mancarci et al. 2017</a> paper.</p></li>
 <li><p><a href="https://github.com/PavlidisLab/markerGeneProfile"><strong>markerGeneProfile</strong></a> is an R package to infer cell type proportion changes from whole tissue expression profiles. My current work involves improving the reliability of this package and using it on as many whole tissue datasets that I can find.</p></li>
@@ -21,15 +21,15 @@ date: ''
 <li><p>I maintain bunch of <a href="https://github.com/topics/ogan-bio"><strong>other packages</strong></a> as well. Packages for gene <a href="https://github.com/oganm/homologene">homology</a> and <a href="https://github.com/oganm/geneSynonym">synonym</a> detection, an <a href="https://github.com/oganm/brainspriteR">MRI visualization tool</a> etc.</p></li>
 </ul>
 </div>
-<div id="fun-projects" class="section level1">
-<h1>Fun projects</h1>
+<div id="just-for-fun-projects" class="section level1">
+<h1>Just-for-Fun projects</h1>
 <ul>
 <li><p><a href="https://github.com/pridiltal/staplr"><strong>staplr</strong></a> is an R package for PDF manipulation. I contributed PDF form filling functionality and worked on some overall improvements.</p></li>
 <li><p><a href="https://github.com/oganm/stockfisher"><strong>stockfisher</strong></a> is an R package that allows easy interaction with UCI capable chess engines through R.</p></li>
-<li><p>[<strong>import5eChar</strong>] is an R package that reads D&amp;D character data exported from Walter Kammerer’s <a href="https://play.google.com/store/apps/details?id=com.wgkammerer.testgui.basiccharactersheet.app">Fifth Edition Character Sheet</a> and allows automation of character actions, printing PDF character sheets (this is where staplr contributions came from) and includes a shiny app that acts as an interactive character sheet.</p></li>
+<li><p><a href="https://github.com/oganm/import5eChar"><strong>import5eChar</strong></a> is an R package that reads D&amp;D character data exported from Walter Kammerer’s <a href="https://play.google.com/store/apps/details?id=com.wgkammerer.testgui.basiccharactersheet.app">Fifth Edition Character Sheet</a> and allows automation of character actions, printing PDF character sheets (this is where staplr contributions came from) and includes a shiny app that acts as an interactive character sheet.</p></li>
 <li><p><a href="http://oganm.com/shiny/printSheetApp/"><strong>printSheetApp</strong></a> is a shiny app that wraps import5eChar’s pdf printing functionality for non-R-users.</p></li>
 <li><p><a href="http://oganm.com/shiny/interactiveSheet/"><strong>interactiveSheet</strong></a> is the shiny app that ships with import5eChar package</p></li>
-<li><p>[<strong>diceSyntax</strong>] is an R package that supports complex dice rolling syntax such as <code>10d8d3ro&lt;3</code>. That means roll 10 d8s reroll anything below 3 once drop three lowest dice. import5eChar and my other D&amp;D related packages depend on this</p></li>
+<li><p><a href="https://github.com/oganm/diceSyntax"><strong>diceSyntax</strong></a> is an R package that supports complex dice rolling syntax such as <code>10d8d3ro&lt;3</code>. That means roll 10 d8s, reroll anything below 3 once, drop three lowest dice. import5eChar and my other D&amp;D related packages depend on this</p></li>
 <li><p>I wrote <a href="https://oganm.github.io/dndstats"><strong>this article</strong></a> about statistics of D&amp;D characters submitted to my shiny applications.</p></li>
 <li><p>I maintain <a href="https://github.com/topics/ogan-dnd"><strong>other D&amp;D related packages</strong></a> as well.</p></li>
 <li><p>I run a small plumber <a href="http://oganm.com/api/__swagger__/"><strong>API</strong></a>. It’s main functionality is to create image from texts that are redirected to imgur. Try <code>oganm.com/api/t2img?t=Whatever</code>. Primarily developed for use in <a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator</a>.</p></li>
