new post and other changes

--- a/content/_index.html
+++ b/content/_index.html
@@ -9,14 +9,15 @@ keywords: ogan,mancarci,bioinformatics,rstats,dnd,oganm
 
 <div class="row">
 <div class="col-sm-4">
-<p><img src="./images/cropogbrain.png" height="200" width="200" align="" title="colorized MRI scan of my head. DICOM is a widely used medical imaging format that can be read from R using the oro.dicom package. The image is colorized using the prisma app. You can also see why I always sleep on my left site to breath easier" class="center"></p>
+<p><img src="./images/oganm.jpg" height="200" width="200" align="" style="border-radius: 50%;" class="center"></p>
 <h2 id="b.-ogan-mancarci">B. Ogan Mancarci</h2>
-<p>I am a PhD student of bioinformatics in UBC. I work on gene expression in brain cell types and try to extract cell type specific signals from whole brain gene expression data. Here’s a <a href="http://oganm.github.io/CV/">CV</a>.</p>
+<p>I am a PhD student of bioinformatics in UBC. I work on gene expression in brain cell types and try to extract cell type specific signals from whole brain gene expression data.</p>
+<p>Here’s a <a href="http://oganm.github.io/CV/">CV</a>.</p>
 </div>
 <div class="col-sm-8">
 <h2 id="projects">Projects</h2>
 <ul>
-<li><p><a href="http://neuroexpresso.org/"><strong>NeuroExpresso</strong></a> is my lab’s database cell type specific gene expression. It was released with <a href="http://www.eneuro.org/content/4/6/ENEURO.0212-17.2017">Mancarci et al. 2017</a> paper.</p></li>
+<li><p><a href="http://neuroexpresso.org/"><strong>NeuroExpresso</strong></a> is my lab’s database cell type specific gene expression. It was released with <a href="http://www.eneuro.org/content/4/6/ENEURO.0212-17.2017">Mancarci et al. 2017</a> paper.</p></li>
 <li><p><a href="https://github.com/PavlidisLab/markerGeneProfile"><strong>markerGeneProfile</strong></a> is an R package to infer cell type proportion changes from whole tissue expression profiles. My current work involves improving the reliability of this package and using it on as many whole tissue datasets as I can find.</p></li>
 <li><p><a href="https://github.com/PavlidisLab/gemmaAPI.R"><strong>gemmaAPI</strong></a> is an R package that wraps the <a href="https://gemma.msl.ubc.ca/resources/restapidocs/">API</a> for <a href="https://gemma.msl.ubc.ca/">Gemma</a>, our lab’s manually curated gene expression database.</p></li>
 <li><p><a href="https://github.com/PavlidisLab/ermineR"><strong>ermineR</strong></a> is an R package that wraps ermineJ, our lab’s gene set enrichment tool.</p></li>
