--- a/public/homologene-update/index.html
+++ b/public/homologene-update/index.html
@@ -8,11 +8,22 @@
 
 
 <title>Updating the good old Homologene database - B. Ogan Mancarci</title>
+<meta name="twitter:card" content="summary" >
+<meta name="twitter:site" content="@oganm" >
+
+<meta name="twitter:image" content="http://oganm.com/images/ogbrain.jpg" >
+
+<meta property="twitter:title" content="Updating the good old Homologene database - B. Ogan Mancarci">
 <meta property="og:title" content="Updating the good old Homologene database - B. Ogan Mancarci">
 
 
 
   
+  <meta property="description" content="Updating the gene symbols and IDs of the homologene database">
+  <meta name = "twitter:description" content="Updating the gene symbols and IDs of the homologene database" >
+  
+
+
 
 
 
