--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
 
 
 <meta property="description" content="Personal blog of Ogan Mancarci">
+<meta name = "twitter:description" content="Personal blog of Ogan Mancarci" >
+
+
 
 
 
