--- a/public/note-to-self-fine-tuning-the-site/index.html
+++ b/public/note-to-self-fine-tuning-the-site/index.html
@@ -8,11 +8,19 @@
 
 
 <title>Note to self: Fine tuning the site - B. Ogan Mancarci</title>
+<meta name="twitter:card" content="summary" >
+<meta name="twitter:site" content="@oganm" >
+
+<meta name="twitter:image" content="http://oganm.com/images/ogbrain.jpg" >
+
+<meta property="twitter:title" content="Note to self: Fine tuning the site - B. Ogan Mancarci">
 <meta property="og:title" content="Note to self: Fine tuning the site - B. Ogan Mancarci">
 
 
 
   
+
+
 
 
 
