--- a/public/note-to-self-how-did-i-set-up-this-site/index.html
+++ b/public/note-to-self-how-did-i-set-up-this-site/index.html
@@ -8,13 +8,22 @@
 
 
 <title>Note to self: How did I set up this site - B. Ogan Mancarci</title>
+<meta name="twitter:card" content="summary" >
+<meta name="twitter:site" content="@oganm" >
+
+<meta name="twitter:image" content="http://oganm.com/images/ogbrain.jpg" >
+
+<meta property="twitter:title" content="Note to self: How did I set up this site - B. Ogan Mancarci">
 <meta property="og:title" content="Note to self: How did I set up this site - B. Ogan Mancarci">
 
 
 
   
   <meta property="description" content="A convoluted description of how this site was created">
+  <meta name = "twitter:description" content="A convoluted description of how this site was created" >
   
+
+
 
 
 
