--- a/public/index.html
+++ b/public/index.html
@@ -263,12 +263,12 @@
     				
     					<li>
 	
-	<a href="./categories/programming/">  
+	<a href="./categories/code/">  
 	
 	
 	
 	
-	Programming
+	Code
 	
 	
 	
