--- a/public/is-your-d-d-character-rare-ii-off-brand-edition/index.html
+++ b/public/is-your-d-d-character-rare-ii-off-brand-edition/index.html
@@ -260,12 +260,12 @@
     				
     					<li>
 	
-	<a href="../categories/programming/">  
+	<a href="../categories/code/">  
 	
 	
 	
 	
-	Programming
+	Code
 	
 	
 	
