--- a/public/note-to-self-fine-tuning-the-site/index.html
+++ b/public/note-to-self-fine-tuning-the-site/index.html
@@ -265,12 +265,12 @@
     				
     					<li>
 	
-	<a href="../categories/programming/">  
+	<a href="../categories/code/">  
 	
 	
 	
 	
-	Programming
+	Code
 	
 	
 	
