--- a/content/_index.html
+++ b/content/_index.html
@@ -34,7 +34,7 @@ keywords: ogan,mancarci,bioinformatics,rstats,dnd,oganm
 <li><p><a href="https://github.com/oganm/diceSyntax"><strong>diceSyntax</strong></a> is an R package that supports complex dice rolling syntax such as <code>10d8d3ro&lt;3</code>. That means roll 10 d8s, reroll anything below 3 once, drop three lowest dice. import5eChar and my other D&amp;D related packages depend on this</p></li>
 <li><p>I wrote <a href="https://oganm.github.io/dndstats"><strong>this article</strong></a> about statistics of D&amp;D characters submitted to my shiny applications.</p></li>
 <li><p>I maintain <a href="https://github.com/topics/ogan-dnd"><strong>other D&amp;D related packages</strong></a> as well.</p></li>
-<li><p>I run a small plumber <a href="http://oganm.com/api/__swagger__/"><strong>API</strong></a>. It’s main functionality is to create image from texts that are redirected to imgur. Try <code>oganm.com/api/t2img?t=Whatever</code>. Primarily developed for use in <a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator</a>.</p></li>
+<li><p>I run a small plumber <a href="http://oganm.com/api/__swagger__/"><strong>API</strong></a>. Its main functionality is to create image from texts that are redirected to imgur. Try <code>oganm.com/api/t2img?t=Whatever</code>. Primarily developed for use in <a href="https://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator</a>.</p></li>
 </ul>
 </div>
 </div>
